--- a/poc/src/main/resources/org/epa/mda/poc/poc.CompanyRegistration-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/poc.CompanyRegistration-taskform.form
@@ -3,6 +3,13 @@
 <property name="name" value="poc.CompanyRegistration-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name=":decorator_0" type="HTMLLabel" id="1860360583">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="readonly" value="false"/>
+<property name="htmlContent" value="quot;caquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt; quot;quot;dequot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt; quot;quot;enquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt; quot;quot;esquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt; quot;quot;frquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt; quot;quot;jaquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt; quot;quot;ptquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt; quot;quot;zhquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt; quot;"/>
+<property name="fieldClass" value="HTMLlabel"/>
+</field>
 <field position="1" name="company_name" type="InputText" id="866445799">
 <property name="fieldRequired" value="false"/>
 <property name="groupWithPrevious" value="false"/>
@@ -107,20 +114,16 @@
 <property name="outputBinding" value="company/busActivity2"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="0" name=":decorator_0" type="HTMLLabel" id="1860360583">
+<field position="10" name="company_county" type="InputText" id="982792546">
 <property name="fieldRequired" value="false"/>
-<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;County / Provincequot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
-<property name="htmlContent" value="quot;caquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt;
-quot;quot;dequot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt;
-quot;quot;enquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt;
-quot;quot;esquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt;
-quot;quot;frquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt;
-quot;quot;jaquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt;
-quot;quot;ptquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt;
-quot;quot;zhquot;,quot;&lt;h1&gt;Company Registration Form&lt;/h1&gt;
-quot;"/>
-<property name="fieldClass" value="HTMLlabel"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="outputBinding" value="company/county"/>
+<property name="fieldClass" value="java.lang.String"/>
 </field>
 <dataHolder inputId="" name="#E9E371" type="dataModelerEntry" outId="company" value="org.epa.mda.poc.Company" id="company"/>
 </form>
